src/objects/Round__c.object
<CustomObject>
    <description>This object is used to capture the detail of a MonTRACK call round</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name of record migrated from source org`</description>
        <externalId>true</externalId>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the related campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Rounds</relationshipLabel>
        <relationshipName>Rounds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Links to the related cohort</description>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Rounds</relationshipLabel>
        <relationshipName>Rounds</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Topics__c</fullName>
        <description>Captures the total number of &apos;General&apos; transition topics related to a particular round</description>
        <label>General Topics</label>
        <summaryFilterItems>
            <field>Topic__c.Type__c</field>
            <operation>equals</operation>
            <value>General</value>
        </summaryFilterItems>
        <summaryForeignKey>Topic__c.Round__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_ID__c</fullName>
        <externalId>true</externalId>
        <label>Original ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Round_Number__c</fullName>
        <description>Indicates the round number</description>
        <label>Round Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Round_Specific_Topics__c</fullName>
        <description>Captures the total number of &apos;Specific&apos; transition topics related to a particular round</description>
        <label>Round Specific Topics</label>
        <summaryFilterItems>
            <field>Topic__c.Type__c</field>
            <operation>equals</operation>
            <value>Round 1 Specific, Round 2 Specific, Round 3 Specific, Round 4 Specific, Round 5 Specific</value>
        </summaryFilterItems>
        <summaryForeignKey>Topic__c.Round__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Topics__c</fullName>
        <description>Captures the total number of transition topics</description>
        <label>Total Topics</label>
        <summaryForeignKey>Topic__c.Round__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Round</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Campaign__c</columns>
        <columns>Cohort__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RND-{00000}</displayFormat>
        <label>Round Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rounds</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>